updated securityconfigue and authcontroller